Refactor User and Task services, add board service